--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@
   width: 40px;
   cursor: pointer;
 }
+
+.link{
+  text-decoration: none;
+  color: white;
+  margin-left: 5px;
+  text-decoration: underline;
+}
